--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/quarterto/Kessel",
   "devDependencies": {
     "LiveScript": "^1.2.0",
+    "chai": "^1.9.1",
+    "expect.js": "^0.3.1",
+    "mocha": "^1.21.4",
     "sweet.js": "^0.7.0"
   }
 }
