--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "chai": "^1.9.1",
     "expect.js": "^0.3.1",
     "mocha": "^1.21.4",
+    "sinon": "^1.10.3",
+    "sinon-expect": "^0.2.0",
     "sweet.js": "^0.7.0"
   }
 }
