--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/quarterto/Kessel",
   "devDependencies": {
-    "LiveScript": "^1.2.0",
+    "adt-simple": "^0.1.3",
     "expect.js": "^0.3.1",
+    "lambda-chop": "^0.1.5",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3",
     "sinon-expect": "^0.2.0",
+    "sparkler": "^0.3.4",
     "sweet.js": "^0.7.0"
   }
 }
