--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "sinon-expect": "^0.2.0",
     "sparkler": "^0.3.4",
     "sweet.js": "^0.7.0"
+  },
+  "dependencies": {
+    "curry": "^1.2.0"
   }
 }
